objects/Partner_Marketing_Development_Fund__c.object
<CustomObject>
    <fields>
        <fullName>Anything_else_we_should_know__c</fullName>
        <label>Anything else we should know?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Claim_Notes__c</fullName>
        <label>Claim Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Claimed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claimed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Marketing_Development_Funds1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Activity__c</fullName>
        <label>Date of Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost_of_Activity__c</fullName>
        <label>Estimated Cost of Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Explain_activity_in_detail__c</fullName>
        <label>Explain activity in detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MDF_Date_Submitted__c</fullName>
        <label>MDF Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MDF_Status_Date_Time_Stamp__c</fullName>
        <label>MDF Status Date/Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MDF_Status_Notes__c</fullName>
        <label>MDF Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MDF_Status__c</fullName>
        <label>MDF Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Request Approved</fullName>
                </value>
                <value>
                    <fullName>Request Denied</fullName>
                </value>
                <value>
                    <fullName>Request Expired</fullName>
                </value>
                <value>
                    <fullName>Claim Submitted</fullName>
                </value>
                <value>
                    <fullName>Claim In Review</fullName>
                </value>
                <value>
                    <fullName>Claim Needs More Information</fullName>
                </value>
                <value>
                    <fullName>Claim Approved</fullName>
                </value>
                <value>
                    <fullName>Claim Denied</fullName>
                </value>
                <value>
                    <fullName>Claim Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Activity__c</fullName>
        <label>Other Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Marketing Development Funds</relationshipLabel>
        <relationshipName>Partner_Marketing_Development_Funds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Marketing_Development_Funds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Cost_of_Activity__c</fullName>
        <label>Total Cost of Activity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Activity__c</fullName>
        <label>Type of Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Testimonial Videos</fullName>
                </value>
                <value>
                    <fullName>White Papers</fullName>
                </value>
                <value>
                    <fullName>Research Docs</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Promotional Items</fullName>
                </value>
                <value>
                    <fullName>Online Marketing</fullName>
                </value>
                <value>
                    <fullName>Sponsorships</fullName>
                </value>
                <value>
                    <fullName>Direct Mail/Email</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_the_goal_of_the_activity__c</fullName>
        <label>What is the goal of the activity?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>When_will_the_activity_happen__c</fullName>
        <label>When will the activity happen</label>
        <type>Date</type>
    </fields>
    <label>Partner Marketing Development Fund</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PMDF-{0000000}</displayFormat>
        <label>Partner MDF Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Marketing Development Funds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Other_Activity_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Type_of_Activity__c , "Other") &amp;&amp; ISBLANK( Other_Activity__c )</errorConditionFormula>
        <errorDisplayField>Other_Activity__c</errorDisplayField>
        <errorMessage>Other Activity field is required if Other is the selected Type of Activity value!</errorMessage>
    </validationRules>
</CustomObject>